# context_bridge

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  build_all.sh  build_db.py  ci-local.sh  common.py  embed.py  ingest.py  ingest_code_sessions.py  ingest_web.py  install.sh  pyproject.toml  pyrightconfig.json  query.py  requirements.txt  run_server.sh  schema.sql  server.py  watcher.py  wizard.sh
.github/workflows/: ci.yml
migrations/: 001_initial.sql  002_export_hash.sql
scripts/: build_all.sh  ci-local.sh  run_server.sh  wizard.sh
tests/: .dockerignore  Dockerfile  check_docs.sh  conftest.py  mcp_smoke_test.py  retrieval_smoke_test.py  smoke_test.py  test_build_db.py  test_embed.py  test_ingest.py  test_ingest_code_sessions.py  test_install.sh  test_query.py  test_static.sh  test_watcher.py  test_wizard.sh
